examples/test/testpolicy12236.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12236
  namespace: namespace304
spec:
  podSelector:
    matchLabels:
      key34: value33
      key20: value40
      key35: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value25
          key10: value36
      podSelector:
        matchLabels:
          key14: value11
          key34: value37
          key1: value34
